# partselect-case-study

./: README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: agent.py  config.py  data_access.py  embedder.py  guardrail.py  main.py  models.py  prompts.py  retrieval.py  tools.py
backend/data/: models.json  orders.json  parts.json  repairs.json
backend/scripts/: ingest.py
backend/tests/: test_agent.py  test_api.py  test_data_access.py  test_data_integrity.py  test_guardrail.py  test_retrieval.py  test_tools.py
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ChatWindow.tsx  Composer.tsx  EmptyState.tsx  Header.tsx  Message.tsx
frontend/src/components/cards/: CardRenderer.tsx  CompatibilityCard.tsx  InstallGuide.tsx  OrderCard.tsx  ProductCard.tsx  RepairCard.tsx  shared.tsx
frontend/src/lib/: api.ts  types.ts
