[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.109.1",
    "chromadb>=1.5.9",
    "fastapi>=0.136.3",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.1",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
# Put the backend root on sys.path so tests can `from app import ...`
# without an installed package or __init__.py (we use namespace packages).
pythonpath = "."
testpaths = ["tests"]
